Reject module-info classfiles for open modules that have non-zero number of opens directives.